--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
@@ -147,17 +147,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Customer.h" />
+    <ClInclude Include="CustomerDB.h" />
+    <ClInclude Include="IRP.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="ModelBase.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Customer.cpp" />
+    <ClCompile Include="CustomerDB.cpp" />
+    <ClCompile Include="IRP.cpp" />
     <ClCompile Include="IRPmodel.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="ModelBase.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="customerData.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
