--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\C++\IRPmodel\IRPmodel\Node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Edge.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\C++\IRPmodel\IRPmodel\Node.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Edge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
