--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
@@ -152,32 +152,30 @@
   <ItemGroup>
     <ClInclude Include="Customer.h" />
     <ClInclude Include="CustomerDB.h" />
-    <ClInclude Include="Edge.h" />
+    <ClInclude Include="graphAlgorithm.h" />
     <ClInclude Include="IRP.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="ModelBase.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VRP.h" />
-    <ClInclude Include="\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\C++\IRPmodel\IRPmodel\graphAlgorithm.h" />
-    <ClInclude Include="\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\C++\IRPmodel\IRPmodel\Node.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Customer.cpp" />
     <ClCompile Include="CustomerDB.cpp" />
-    <ClCompile Include="Edge.cpp" />
+    <ClCompile Include="graphAlgorithm.cpp" />
     <ClCompile Include="IRP.cpp" />
     <ClCompile Include="IRPmodel.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="ModelBase.cpp" />
+    <ClCompile Include="Node.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\C++\IRPmodel\IRPmodel\graphAlgorithm.cpp" />
-    <ClCompile Include="\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\C++\IRPmodel\IRPmodel\Node.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="customerData.txt" />
