--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
@@ -153,11 +153,13 @@
     <ClInclude Include="Customer.h" />
     <ClInclude Include="CustomerDB.h" />
     <ClInclude Include="CustomerIRP.h" />
+    <ClInclude Include="CustomerIRPDB.h" />
     <ClInclude Include="CustomerVRP.h" />
     <ClInclude Include="CustomerVRPDB.h" />
     <ClInclude Include="graphAlgorithm.h" />
     <ClInclude Include="IRP.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="MapIRP.h" />
     <ClInclude Include="ModelBase.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="stdafx.h" />
@@ -169,12 +171,14 @@
     <ClCompile Include="Customer.cpp" />
     <ClCompile Include="CustomerDB.cpp" />
     <ClCompile Include="CustomerIRP.cpp" />
+    <ClCompile Include="CustomerIRPDB.cpp" />
     <ClCompile Include="CustomerVRP.cpp" />
     <ClCompile Include="CustomerVRPDB.cpp" />
     <ClCompile Include="graphAlgorithm.cpp" />
     <ClCompile Include="IRP.cpp" />
     <ClCompile Include="IRPmodel.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="MapIRP.cpp" />
     <ClCompile Include="ModelBase.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="stdafx.cpp">
