--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="ModelBase.h" />
     <ClInclude Include="ModelParameters.h" />
     <ClInclude Include="Node.h" />
+    <ClInclude Include="NodeStrong.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VRP.h" />
@@ -183,6 +184,7 @@
     <ClCompile Include="ModelBase.cpp" />
     <ClCompile Include="ModelParameters.cpp" />
     <ClCompile Include="Node.cpp" />
+    <ClCompile Include="NodeStrong.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
