--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="NodeStrong.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IRPmodel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
