--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
@@ -81,6 +81,12 @@
     <ClInclude Include="NodeIRP.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Calculations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DataSets.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -136,6 +142,9 @@
     </ClCompile>
     <ClCompile Include="NodeIRP.cpp">
       <Filter>Source Files\Node</Filter>
+    </ClCompile>
+    <ClCompile Include="Calculations.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
