--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
@@ -27,12 +27,6 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Customer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CustomerDB.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="IRP.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -87,6 +81,15 @@
     <ClInclude Include="DataSets.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NodeInstance.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NodeIRPHolder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NodeInstanceDB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -116,9 +119,6 @@
     <ClCompile Include="CustomerVRPDB.cpp">
       <Filter>Source Files\Customer</Filter>
     </ClCompile>
-    <ClCompile Include="CustomerDB.cpp">
-      <Filter>Source Files\Customer</Filter>
-    </ClCompile>
     <ClCompile Include="CustomerIRP.cpp">
       <Filter>Source Files\Customer</Filter>
     </ClCompile>
@@ -126,9 +126,6 @@
       <Filter>Source Files\Customer</Filter>
     </ClCompile>
     <ClCompile Include="CustomerVRP.cpp">
-      <Filter>Source Files\Customer</Filter>
-    </ClCompile>
-    <ClCompile Include="Customer.cpp">
       <Filter>Source Files\Customer</Filter>
     </ClCompile>
     <ClCompile Include="ModelParameters.cpp">
@@ -145,6 +142,15 @@
     </ClCompile>
     <ClCompile Include="Calculations.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NodeInstance.cpp">
+      <Filter>Source Files\Customer</Filter>
+    </ClCompile>
+    <ClCompile Include="NodeIRPHolder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NodeInstanceDB.cpp">
+      <Filter>Source Files\Customer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
