--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
@@ -169,6 +169,9 @@
     <ClInclude Include="NodeIRP.h" />
     <ClInclude Include="NodeIRPHolder.h" />
     <ClInclude Include="NodeStrong.h" />
+    <ClInclude Include="Route.h" />
+    <ClInclude Include="RouteProblem.h" />
+    <ClInclude Include="Solution.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VRP.h" />
@@ -193,6 +196,9 @@
     <ClCompile Include="NodeIRP.cpp" />
     <ClCompile Include="NodeIRPHolder.cpp" />
     <ClCompile Include="NodeStrong.cpp" />
+    <ClCompile Include="Route.cpp" />
+    <ClCompile Include="RouteProblem.cpp" />
+    <ClCompile Include="Solution.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
