--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj.filters
@@ -90,6 +90,15 @@
     <ClInclude Include="NodeInstanceDB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Solution.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Route.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RouteProblem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -151,6 +160,15 @@
     </ClCompile>
     <ClCompile Include="NodeInstanceDB.cpp">
       <Filter>Source Files\Customer</Filter>
+    </ClCompile>
+    <ClCompile Include="Solution.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Route.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RouteProblem.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
