--- a/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
+++ b/C++/IRPmodel/IRPmodel/IRPmodel.vcxproj
@@ -75,8 +75,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Einar Aastveit\source\repos\IRPProject\include;C:\Users\einarea\Source\Repos\IRPProject\boost\boost_1_60_0;C:\Users\Einar Aastveit\source\repos\IRPProject2\include;C:\Users\einarea\Source\Repos\IRPProject\exlibs\gnuplot-iostream;\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\XpressFiles\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Einar Aastveit\source\repos\IRPProject\lib;C:\Users\einarea\Source\Repos\IRPProject\boost\boost_1_60_0\lib64-msvc-14.0;\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\XpressFiles\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Einar Aastveit\source\repos\IRPProject\include;C:\Users\einarea\Source\Repos\IRPProject\boost_1_60_0;C:\Users\Einar Aastveit\source\repos\IRPProject2\include;C:\Users\einarea\Source\Repos\IRPProject\exlibs\gnuplot-iostream;\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\XpressFiles\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Einar Aastveit\source\repos\IRPProject\lib;C:\Users\einarea\Source\Repos\IRPProject\boost_1_60_0\lib64-msvc-14.0;\\sambaad.stud.ntnu.no\einarea\Documents\Visual Studio 2015\Projects\IRP\XpressFiles\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
